update config file

--- a/Reports/extent-reports-config.json
+++ b/Reports/extent-reports-config.json
@@ -6,9 +6,9 @@
   "configuration": {
     "settings": {
       "theme": "Dark",
-      "documentTitle": "Haraj",
+      "documentTitle": "GET",
       "encoding": "utf-8",
-      "reportName": "Torkey",
+      "reportName": "Ahmed",
       "dashboard": true
     }
   },
